# ClinicalCopilot.Idea

./: .gitignore  ArgumentForClinicalCopilot  ClinicalMindSidekic.v2.py  ClinicalSidekick.CuratedMindConversation.py  Dockerfile  README.md  TherapyCo-Pilot.py  pyproject.toml
.github/workflows/: docker-image.yml  main.yml
OriginalFiles/: TestClient.py  TherapyCo-Pilot.py  ask-api.py
clinical_mind_sidekick/: __init__.py  main.py
clinical_mind_sidekick/api/: models.py  routes.py
clinical_mind_sidekick/core/: __init__.py  config.py  openai_client.py
clinical_mind_sidekick/services/: __init__.py  ai_service.py
